2008-04-30  Shuai Liu  <shuai.liu@sun.com>

	** Fix for bug #530672
	Evolution crashes when viewing pgp-signed message

	* em-format-html-display.c: Modify the array of smime_sign_colour 
	from 4 to 5 to ensure the input by data-server is right

2008-04-29  Milan Crha  <mcrha@redhat.com>

	* em-utils.c: (em_utils_snoop_type):
	Fixes compiler warning (unused variable).

2008-04-29  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #511337

	* em-format-html.h: (EMFormatHTMLState), (struct _EMFormatHTML):
	* em-format-html.c: (efh_init), (efh_format_done),
	(efh_format_timeout): Track state of the object to recognize
	whether rendering new content or doing nothing.
	* em-format-html-display.c: (efhd_can_process_attachment),
	(efhd_attachment_show), (efhd_attachment_popup),
	(efhd_attachment_image), (efhd_attachment_button):
	Do nothing when EMFormatHTML object's state is RENDERING,
	the puri object instance is not valid anyway.

2008-04-28  Johan Euphrosine  <proppy@aminche.com>

	** Fix for bug #529247

	* em-format-html.h (struct _EMFormatHTML): Add header_colour.

	* em-format-html-display.c (efhd_gtkhtml_realise): Use bg style
	properties for body_colour, fg for header_colour, darken for
	frame_colour, bg for content_colour.

	* em-format-html.c (efh_init), (efh_format_exec), (efh_init),
	(efh_text_plain), (efh_text_enriched), (efh_text_html),
	(efh_message_deliverystatus): Use header_colour for text color of
	the message header, body_colour for background color of the
	message header, text_colour for text color of the message content,
	base_colour for background color of the message content.

2008-04-28  Srinivasa Ragavan  <sragavan@novell.com>

	* mail/em-utils.c: Avoid crash while detecting mime types.

2008-04-28  Srinivasa Ragavan  <sragavan@novell.com>

	* mail/em-format-html.c: Fix the Mailer header display

2008-04-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #273041

	* mail.error.xml: (junk-check-error), (junk-report-error),