@@ -561,7 +561,8 @@ em_folder_view_open_selected(EMFolderView *emfv)
 
 		emmb = (EMMessageBrowser *)em_message_browser_window_new();
 		message_list_set_threaded(((EMFolderView *)emmb)->list, emfv->list->threaded);
-		message_list_set_search(((EMFolderView *)emmb)->list, emfv->list->search);
+		/* do not inherit search filter, because it can hide actual message for some filters */
+		/*message_list_set_search(((EMFolderView *)emmb)->list, emfv->list->search);*/
 		em_folder_view_set_hide_deleted((EMFolderView *)emmb, emfv->hide_deleted);
 		/* FIXME: session needs to be passed easier than this */
 		em_format_set_session((EMFormat *)((EMFolderView *)emmb)->preview, ((EMFormat *)emfv->preview)->session);
