@@ -1,3 +1,14 @@
+2008-04-30  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #467892
+
+	* em-folder-view.c: (em_folder_view_open_selected):
+	Do not inherit search filters when opening messages in new window.
+	* message-list.c: (regen_list_exec):
+	If we are called from folder_changed even, then keep the actually
+	selected message so it will not disappear when user reads it and
+	it doesn't belong to actual filter anymore.
+
 2008-04-30  Shuai Liu  <shuai.liu@sun.com>
 
 	** Fix for bug #530672
